L10n domain issue + Js cleanup + Css fix (z-index)
git-svn-id: https://plugins.svn.wordpress.org/dashbar/trunk@86949 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/DashBar.css
+++ b/DashBar.css
@@ -1,5 +1,6 @@
 #DashBar { 
   position: fixed; 
+  z-index: 9999;
   top: 0; 
   left: -100%;
   width: 100%;
